fixing spacing on post headers, fixing gulpfile

--- a/src/less/templates/_posts.less
+++ b/src/less/templates/_posts.less
@@ -4,6 +4,7 @@
     border-bottom: 1px solid #eee;
     h2 {
       margin-top: 0;
+      margin-bottom: 0.5rem;
       a {
         color: @site-color-black;
         text-decoration: none;
@@ -21,7 +22,7 @@
       color: @site-color-gray-dark;
       font-style: italic;
       text-decoration: none;
-      margin-bottom: 0;
+      margin-bottom: 1rem;
     }
     .entry-title {
       margin-top: 0.5rem;
